--- a/post3.2.html
+++ b/post3.2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="Index3.html"><img width="400px" src="https://res.cloudinary.com/druoz6sqc/image/upload/v1638088609/PicsArt_11-28-03.32.08_v4msed.png" alt="logo"></a>
+        <a href="Index.html"><img width="400px" src="https://phonoteka.org/uploads/posts/2021-05/1621710705_9-phonoteka_org-p-fon-uvlecheniya-khobbi-10.jpg" alt="logo"></a>
     </header>
     <main>
         <div>
@@ -31,7 +31,7 @@
         <div>
             <div>
                 <div>
-                    <img width="250px" src="https://res.cloudinary.com/druoz6sqc/image/upload/v1638088609/PicsArt_11-28-03.32.08_v4msed.png" alt="logo" >
+                    <img width="250px" src="https://avatars.mds.yandex.net/get-zen_doc/1648379/pub_5d72734f3d008800ad99e38f_5d7274b68d5b5f00b04f6c37/scale_1200" alt="logo" >
                 </div>
             </div>
         </div>
