--- a/post3.1.html
+++ b/post3.1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="Index.html"><img width="400px" src="https://phonoteka.org/uploads/posts/2021-05/1621710705_9-phonoteka_org-p-fon-uvlecheniya-khobbi-10.jpg" alt="logo"></a>
+        <a href="index.html"><img width="400px" src="https://phonoteka.org/uploads/posts/2021-05/1621710705_9-phonoteka_org-p-fon-uvlecheniya-khobbi-10.jpg" alt="logo"></a>
     </header>
     <main>
         <div>
